<resources>
    <string name="hi">Hi</string>
    <string name="app_name">Avanti Market</string>
    <string name="avanti_markets">Avanti Markets</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="email_me">EMAIL ME</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="password">Password</string>
    <string name="login">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_email">Forgot Email?</string>
    <string name="not_registered">Not Registered?</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="how_to_register">HOW TO REGISTER</string>
    <string name="existing_account">If you have an existing My Market Account enabled for web access, you can use the same email &amp; password to login.</string>
    <string name="step_1">STEP 1</string>
    <string name="scan">Scan your Market Card at the kiosk and register your email.</string>
    <string name="step_2">STEP 2</string>
    <string name="allow">Click \'yes\' to allow Web Access.</string>
    <string name="step_3">STEP 3</string>
    <string name="link">Check your email for a link to set your password.</string>
    <string name="sign_up"> Register and Sign Up</string>
    <string name="signup_terms_agree">I agree with the </string>
    <string name="terms_service">Terms of Service</string>
    <string name="accept_terms">Accepting Terms of Service is required.</string>
    <string name="terms_conditions">BYNDL AMC, LLC Terms of Service</string>
    <string name="acceptance_required">You are required to accept Terms of Service. Do you wish to continue?</string>
    <string name="wish_to_save">Do you wish to store\n\rsecure payment information\n\rfor future use?</string>
    <string name="save">Save</string>
    <string name="no_thanks">No Thanks</string>
    <string name="cancel_capital">CANCEL</string>
    <string name="cancel_normal">Cancel</string>
    <string name="accept">Accept</string>
    <string name="confirm">CONFIRM</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_empty">Please enter first name</string>
    <string name="last_name_empty">Please enter last name</string>
    <string name="contact_email">(Contact Email)</string>
    <string name="expiry">MMYYYY</string>
    <string name="phone">Phone</string>
    <string name="phone_must">Please enter valid phone number</string>
    <string name="old_pin">Old PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="create_pin">Create PIN</string>
    <string name="enter_new_pin">Create New PIN</string>
    <string name="re_enter_pin">Re-enter PIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="set_change_pin">Set/Change PIN?</string>
    <string name="forgot_pin_qstn">Forgot PIN?</string>
    <string name="market_cards">Market Cards</string>
    <string name="ways_to_pay">WAYS TO PAY</string>
    <string name="credit_cards">Credit/Debit Cards</string>
    <string name="credit_card">Currently No cards are saved</string>
    <string name="pay">PAY</string>
    <string name="pay_with">Reload with :</string>
    <string name="locate">Locate</string>
    <string name="rewards">Rewards</string>
    <string name="account_history">ACCOUNT HISTORY</string>
    <string name="my_avanti">MY MARKET</string>
    <string name="reload">RELOAD</string>
    <string name="reload_now">Choose Reload Amount</string>
    <string name="reload_description">below to be taken to a secure\n\rpage to enter payment details.</string>
    <string name="auto_reload">AUTO-RELOAD</string>
    <string name="support">Support</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="my_account">My Account</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="set_pin">SET PIN AND SIGN IN</string>
    <string name="primary">PRIMARY</string>
    <string name="manage">MANAGE</string>
    <string name="welcome">Welcome to Avanti Markets</string>
    <string name="welcome_registration">Welcome to Avanti Markets!</string>
    <string name="enjoy">Enjoy the convenience of using your app to\n\rpay for fresh foods, snacks and beverages.</string>
    <string name="instructions">An email with instructions on\n\rhow to reset your password\n\rhas been sent to</string>
    <string name="reset_instructions">If the email address you entered is tied to a Market Account, you will receive an email with password reset instructions. If you do not receive an email within a few minutes, please click the \"Forgot Password\" button again and enter alternative email address.</string>
    <string name="enter_email">Enter the email associated with your account to\n\rreceive instructions on how to reset your password.</string>
    <string name="balance">Balance: $</string>
    <string name="updated_balance">Balance</string>
    <string name="scan_to_pay">Scan to Pay</string>
    <string name="done">DONE</string>
    <string name="my_market_card">My Mobile Market Card</string>
    <string name="my_play_card">My Play Card</string>
    <string name="my_backup_card">My Backup Card</string>
    <string name="reload_amount">Reload Amount</string>
    <string name="get_bonus">Get a bonus when you reload at higher amounts.</string>
    <string name="reload_ten">$10</string>
    <string name="reload_twenty">$20</string>
    <string name="reload_fifty">$50</string>
    <string name="reload_denomination_twenty">$20\n\r$1 Bonus</string>
    <string name="reload_denomination_fifty">$50\n\r$2 Bonus</string>
    <string name="update_info">UPDATE INFO</string>
    <string name="update_success">Update Successful</string>
    <string name="make_primary">MAKE PRIMARY</string>
    <string name="make_prime">Make Primary</string>
    <string name="zip">Billing ZIP Code</string>
    <string name="cvv">3-Digit CVV Code</string>
    <string name="add_card">ADD CARD</string>
    <string name="add_market_card">Add Market Card</string>
    <string name="title_add_market_card">ADD MARKET CARD</string>
    <string name="personal">Personal</string>
    <string name="family">Family</string>
    <string name="name_of_market_card">Name of Card</string>
    <string name="market_card_scan_code">Enter Card Scan Code</string>
    <string name="professional">Professional</string>
    <string name="helpful_hints">Helpful How To\'s</string>
    <string name="contact_us">Contact Us</string>
    <string name="your_feedback">Share Your Feedback</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="choose_color">Choose a Color</string>
    <string name="thank_you">Thank you for shopping\n\r at Avanti Markets.</string>
    <string name="confirm_signout">It seems you have changed\n\ryour password! Please re-login</string>
    <string name="pin_modified">It seems you changed/forgot your PIN!</string>
    <string name="relogin">Re-Login</string>
    <string name="forgot_pin">Forgot PIN</string>
    <string name="ok">OK</string>
    <string name="or">OR</string>
    <string name="delete">DELETE</string>
    <string name="delete_card">DELETE CARD</string>
    <string name="delete_cc">DELETE WAY TO PAY</string>
    <string name="keep">KEEP</string>
    <string name="scan_success">Scanning Successful: \n\r</string>
    <string name="info_saved">Hello! your profile\n\rinformation has been saved.</string>
    <string name="cancel_confirmation">Account Set-up is required.\n\rAre you sure you want to cancel?</string>
    <string name="pin_changed">Your PIN was \n\rsuccessfully changed.</string>
    <string name="get_balance_url_path">api/getBalance</string>
    <string name="get_scan_codes_url_path">api/getScanCodes</string>
    <string name="delete_credit_card">Are you sure\n\ryou wish to delete the card?</string>
    <string name="delete_auto_recharge_card">Deleting this will remove\n\ryour auto-reload settings.\n\rDo you wish to continue?</string>
    <string name="hidden_card_number">**** **** ****</string>
    <string name="using_the_market">Using The Market</string>
    <string name="using_the_app">Using The App</string>
    <string name="common_issues">Common Issues</string>
    <string name="search_how_to">Search for How To\'s</string>
    <string name="search_results">Search Results</string>
    <string name="contact_us_title">What do you need help with?</string>
    <string name="next">NEXT</string>
    <string name="describe_issue">Describe the issue</string>
    <string name="did_you_see_these">Did you see these?</string>
    <string name="send_request">OR SEND REQUEST</string>
    <string name="contact_us_thankyou_speech">Success!\nYour Support Request has been submitted.\nAn email with details about your request will be sent to you shortly.\n</string>
    <string name="feedback_title">How can we make your experience with us even better?</string>
    <string name="feedback_spinner_hint">Select Feedback Category</string>
    <string name="submit">SUBMIT</string>
    <string name="feedback_description_hint">Please share your feedback and suggestion here.</string>
    <string name="feedbackthankyou_speech">Thank You!\nYour feedback is appreciated and valued.\n</string>
    <string name="unauthorized">Log-in Error</string>
    <string name="check_credentials">Please check your sign-in information and try again.</string>
    <string name="network_error_msg">Please check your internet connection and try again.</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="error_msg">Our server is currently busy. Please try after sometime.</string>
    <string name="current_discount">Current Discounts</string>
    <string name="rewards_point_earned">Loyalty Points Earned:</string>
    <string name="rewards_current_promotions">Current Promotions:</string>
    <string name="find_helpful">Did you find this helpful?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="green">green</string>
    <string name="dark_blue">darkBlue</string>
    <string name="sky_blue">skyBlue</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="video_width">250</string>
    <string name="video_height">200</string>
    <string name="search_keywords_hint">Enter search keywords here</string>
    <string name="find">Find</string>
    <string name="transaction_number">Transaction Number: \n\r</string>
    <string name="transaction_location">Location: \n\r</string>
    <string name="transaction_date">Date: \n\r</string>
    <string name="transaction_card_name">Card Name: \n\r</string>
    <string name="transaction_market_card">Market Card: \n\r</string>
    <string name="transaction_card_type">Card Type: \n\r</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="points_earned">Points Earned</string>
    <string name="email_receipt">Email Receipt</string>
    <string name="version_info">v1.18</string>
    <string name="go_to_mmc">Go to MyMarketCard.com to set up\n\ryour auto-reload preferences.\n\rFunds will automatically be added to your account based on rules you set!</string>
    <string name="locations">LOCATIONS</string>
    <string name="push_notifications">PUSH NOTIFICATIONS:</string>
    <string name="terms">Terms of Service</string>
    <string name="receipts">Receipts</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="password_lock">Password Lock</string>
    <string name="messages">Messages</string>
    <string name="edit_personal_info">Edit Personal Info</string>
</resources>