<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/m_scrollContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/m_logoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/negative_margin"
                    android:layout_marginLeft="@dimen/regular_textview_height"
                    android:layout_marginRight="@dimen/regular_textview_height"
                    android:layout_marginTop="@dimen/email_login_top_margin"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/avanti_field_label"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="@dimen/rewards_screen_text_size" />

                <TextView
                    style="@style/avanti_field_label"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/enjoy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/m_emailTextField"
                        style="@style/avanti_text_field"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textCursorDrawable="@null" />

                    <include
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        layout="@layout/horizontal_separator" />

                    <EditText
                        android:id="@+id/m_passwordTextField"
                        style="@style/avanti_text_field"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@null" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/m_forgotPasswordButton"
                        style="@style/avanti_link"
                        android:layout_gravity="left"
                        android:text="@string/forgot_password" />

                    <Button
                        android:id="@+id/m_notRegisteredButton"
                        style="@style/avanti_link"
                        android:layout_alignParentRight="true"
                        android:text="@string/not_registered" />
                </RelativeLayout>

                <Button
                    android:id="@+id/m_loginButton"
                    style="@style/avanti_button"
                    android:layout_marginBottom="@dimen/home_icons_height"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_green_grey_background"
                    android:text="@string/login" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/powered_byndl_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/powered_by_byndl" />

</RelativeLayout>