<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <ScrollView
        android:id="@+id/m_scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/m_logoImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/regular_textview_height"
                android:layout_marginRight="@dimen/regular_textview_height"
                android:layout_marginTop="@dimen/pin_login_top_margin"
                android:src="@drawable/logo" />

            <TextView
                style="@style/avanti_field_label"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/regular_margin"
                android:layout_marginBottom="@dimen/regular_margin"
                android:text="@string/enter_email"
                android:textColor="@color/white"
                android:textSize="@dimen/enter_email_text_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/m_emailToResetPassword"
                    style="@style/avanti_text_field"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <Button
                android:id="@+id/m_forgotEmail"
                style="@style/avanti_link"
                android:layout_gravity="left"
                android:text="@string/forgot_email"
                android:visibility="gone" />

            <Button
                android:id="@+id/m_emailMe"
                style="@style/avanti_button"
                android:layout_marginTop="@dimen/semi_regular_margin"
                android:background="@drawable/button_green_grey_background"
                android:text="@string/email_me" />

            <Button
                android:id="@+id/m_cancel_Button"
                style="@style/avanti_button"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_light_grey_white_background"
                android:text="@string/cancel_capital" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/powered_by_byndl" />

</RelativeLayout>