<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/terms_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <WebView
        android:id="@+id/terms_and_conditions_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dialog_txtMsg"
        android:layout_below="@+id/heading" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center_horizontal"
        android:text="@string/terms_conditions"
        android:textColor="@color/black"
        android:textSize="@dimen/rewards_screen_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_txtMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_layout"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:text="@string/accept_terms"
        android:textColor="@color/black"
        android:textSize="@dimen/regular_text_size" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/accept_button"
            android:layout_width="0dip"
            android:layout_height="@dimen/regular_btn_height"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="@dimen/regular_text_size" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dip"
            android:layout_height="@dimen/regular_btn_height"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:text="@string/cancel_normal"
            android:textColor="@color/white"
            android:textSize="@dimen/regular_text_size" />
    </LinearLayout>

</RelativeLayout>